sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var Swap : boolean = true
  while (Swap = true) {
    for(i <- 0 to getNombreValeurs()-1) {
      Swap = false
      if (plusPetit(i,i+1)) {
        Swap = true
        echange(i,i+1)
      }
    }
  }
}